syntax = "proto3";

package user;

option go_package = "./user";

service UserService{
    rpc CreateUser (User) returns (User) {}
}

message UserID{
    int32 value = 1;
}

message UserName{
    string value = 1;
}

message User {
    int32 id = 1;
    string name = 2;
    string password = 3;
    string email = 4;
    string phone = 5;
    int32 status = 7;
    int32 role = 8;
    int64 createTime = 9;
    int32 theme = 10;
    int32 language = 11;
}

message Empty {

}
